--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-bullseye
+FROM python:3.12-alpine
 
 WORKDIR /app
 
@@ -7,5 +7,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+EXPOSE 8080
 
 CMD ["uvicorn", "spaceship.app:app", "--host", "0.0.0.0", "--port", "8000"]
