--- a/typescript/Dockerfile
+++ b/typescript/Dockerfile
@@ -1,13 +1,22 @@
-FROM node:20
-
+FROM node:20-slim AS builder
 WORKDIR /app
 
 COPY package*.json ./
+COPY prisma ./prisma/
 RUN npm install
+RUN npx prisma generate
 
 COPY . .
-RUN npx prisma generate
 RUN npm run build
-EXPOSE 3033
 
-CMD ["npm", "run", "start"]
+FROM node:20-alpine AS production
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install --only=production
+
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
+
+EXPOSE 3033
+CMD ["node", "dist/index.js"]
