--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -10,4 +10,4 @@ COPY . .
 
 EXPOSE 8080
 
-CMD ["uvicorn", "spaceship.app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "spaceship.main:app", "--host", "0.0.0.0", "--port", "8000"]
